--- a/package.json
+++ b/package.json
@@ -2,22 +2,22 @@
   "name": "grunt-depcheck",
   "description": "Depcheck Grunt plugin",
   "version": "0.0.1",
-  "homepage": "https://github.com/rumpl/grunt-depcheck",
+  "homepage": "https://github.com/depcheck/grunt-depcheck",
   "author": {
     "name": "Djordje Lukic",
     "email": "lukic.djordje@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/rumpl/grunt-depcheck.git"
+    "url": "git://github.com/depcheck/grunt-depcheck.git"
   },
   "bugs": {
-    "url": "https://github.com/rumpl/grunt-depcheck/issues"
+    "url": "https://github.com/depcheck/grunt-depcheck/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/rumpl/grunt-depcheck/blob/master/LICENSE-MIT"
+      "url": "https://github.com/depcheck/grunt-depcheck/blob/master/LICENSE-MIT"
     }
   ],
   "engines": {
@@ -35,6 +35,9 @@
     "patch-version": "^0.1.1"
   },
   "keywords": [
+    "depcheck",
+    "grunt",
+    "grunt-plugin",
     "gruntplugin"
   ],
   "dependencies": {
