--- a/.travis.yml
+++ b/.travis.yml
@@ -16,16 +16,17 @@ before_deploy:
 deploy:
   - provider: npm
     skip_cleanup: true
-    email: lijunle@gmail.com
+    email: lukic.djordje@gmail.com
     api_key:
-      secure: StcT8gQfJW0nipD0H1fnFrxkl/VijNproaJ/EFg5AJuFtIdsn4OFein03+MYsTg6w1j9V2m8gVhCRD0dvgvCYtnbznoyqEoIf06ws2vHNYlnelPneZDMhsjaxMVnRcOvttUxAYkVJQ8Bn26scnDLwkuiJfNhyBX0hieMMD/IfOI=
+      secure: PwEt5+Vgf1Klas8rB1arAF/5zjIGMkP6NekNHkKhJXDwQkY3g19p3ORXnwOk4oRg3ggf3FO1CI7uh/fJb7nnfVMYc+X1Db1MoYgVQAWBS5L723VgLQ8I2BRHNie7CRmXywMUIV4E/8RYGeH/4b6jlY6gKNx3gnjeSeSjKyKl+OQ=
     on:
       tags: true
       node: 10
   - provider: releases
     skip_cleanup: true
     api_key:
-      secure: S9ZDp1V/NAFAPRfJbwiE3++ML5+l9gqQ6NuVLPqQR5qffOzax72mL/sBQUZCVRAw7W8mPCW24FK42KdFgDRCRA9ydCqhoUYAOpS0uQHqhiYFfnoIm6UbKEJ6lMnA3xir15+4JF3iU+Vwag9HMSIw8yOyp1CPBNT9YVYw+mEeIz0=
+      secure: KSDU8zjWT7h0lE92ww+4GXAP4RMMXAqZ3fpq4F1C2tHCdK4udXBLPYhRead70FkHMXbRvAHL84KO5018Jnx4QNGvWjSYQxDH2mgMj7FxempSS/Vll30LlDym62F1v6zLvgICYfb+0phJJ2JCCk7gdKnhF+++Kq71DQDarLsUJXw=
+    draft: true
     on:
       tags: true
       node: 10
